fix: change gap from rem to px

--- a/static/resources/styles.css
+++ b/static/resources/styles.css
@@ -18,7 +18,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   max-width: 1200px;
-  gap: 0.5rem;
+  gap: 3px;
 
   .image-container {
     align-content: center;
